# testkraken

./: .et  .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  altair_plots.py  circle.yml  container_generator.py  cwl_generator.py  mcflirt.ipynb  setup.cfg  setup.py  test_main.py  testrunner.py  workflowregtest.py
.circleci/: config.yml
dashboard_template/: dashboard.js
data_input/: sub-02_task-fingerfootlips_bold_pr.nii
data_ref/: sub-02_task-fingerfootlips_bold_SPMrealign.nii
examples/: dashboard.html  dashboard.js  example_output.csv  example_output.json  index.html  results.csv  style.css
testing_functions/: __init__.py  check_output.py  stat_list.py  test_afni_stat.py  test_el_list_eq.py  test_el_list_eq_tmp_noarray.py  test_list_eq.py  test_obj_eq.py  test_rand_almosteq.py
testkraken/: __init__.py  _version.py  altair_plots.py  cli.py  container_generator.py  cwl_generator.py  data_management.py  testrunner.py  workflowregtest.py
testkraken/dashboard_template/: dashboard.js  index.html  style.css
testkraken/dashboard_template/images/: TestKraken2.ai  TestKraken_flavicon.ai
testkraken/testing_functions/: check_output.py  pearson_correlation.py  stat_list.py  test_afni_scan_data.py  test_afni_scan_data_diff_fake.py  test_afni_scan_headers.py  test_arr_eq.py  test_el_list_eq.py  test_el_list_eq_tmp.py  test_el_list_eq_tmp_noarray.py  test_js_el_list_eq.py  test_obj_eq.py  test_rand_almosteq.py
testkraken/tests/: test_afni.py  test_basic_examples.py  test_cpac.py  test_nfm.py
tests/: test_afni.py  test_basic_examples.py
tests_regression/: test_mcflirt_regr.py
tests_regression_nipype/: test_spm_realign_regr.py
tests_unit/: common_tests.py  test_mcflirt.py  test_spm_realign.py  test_temp.py  test_temp_mcflirt.py
workflows4regtests/afni/AFNIdata6_FTanalysis_s05.ap.uber/: parameters.yaml
workflows4regtests/afni_dc2019/3dcopy/: parameters.yaml  testkraken_spec.yml
workflows4regtests/afni_dc2019/3dcopy_datalad/: testkraken_spec.yml
workflows4regtests/basic_examples/deface_bash/: parameters.yaml
workflows4regtests/basic_examples/deface_python/: parameters.yaml
workflows4regtests/basic_examples/env_test/: environment.yml  parameters.json  parameters.yaml
workflows4regtests/basic_examples/fake_list/: parameters.json  parameters.yaml
workflows4regtests/basic_examples/pseudo_random_numbers/: parameters.json  parameters.yaml  testkraken_spec.yml
workflows4regtests/basic_examples/pseudo_random_numbers_refenv/: testkraken_spec.yml
workflows4regtests/basic_examples/pseudo_random_numbers_refenv_cont/: testkraken_spec.yml
workflows4regtests/basic_examples/pseudo_random_numbers_reffixenv/: testkraken_spec.yml
workflows4regtests/basic_examples/simple_workflow/: environment_py2.yml  environment_py3.yml  environment_simple2.yml  environment_simple3.yml  parameters.json  parameters.yaml  testkraken_spec.yml
workflows4regtests/basic_examples/sorting_array_conda/: parameters.json  parameters.yaml  testkraken_spec.yml
workflows4regtests/basic_examples/sorting_array_conda_envdescr/: testkraken_spec.yml
workflows4regtests/basic_examples/sorting_array_pip/: parameters.json  parameters.yaml
workflows4regtests/basic_examples/sorting_array_pip_comvarenv/: parameters.yaml
workflows4regtests/basic_examples/sorting_array_pip_notests/: testkraken_spec.yml
workflows4regtests/basic_examples/sorting_array_runbash/: testkraken_spec.yml
workflows4regtests/basic_examples/sorting_array_testcontainer/: testkraken_spec.yml
workflows4regtests/basic_examples/sorting_list/: parameters.json  parameters.yaml  testkraken_spec.yml
workflows4regtests/basic_examples/sorting_list_fixedenv/: parameters.yaml  testkraken_spec.yml
workflows4regtests/cpac/anat_preproc/: testkraken_spec.yml
workflows4regtests/nfm/coco2019-unifize_and_skullstrip/package/: setup.cfg
workflows4regtests/nfm/coco2019-unifize_and_skullstrip/package/niflow/coco2019/unifize_and_skullstrip/: cli.py  workflow.py
(+46 files in other folders)
