[metadata]
name = testkraken
url = https://github.com/ReproNim/testkraken
author = Testkraken Developers
summary = Test workflows in a matrix of computational environments.
description-file =
    README.md
license = Apache License, 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
include_package_data = true
install_requires =
    altair
    beautifulsoup4
    click
    datalad
    pydra
    matplotlib
    nibabel
    pandas
    neurodocker
    PyYAML
    etelemetry

[options.extras_require]
dev = pytest

[options.entry_points]
console_scripts =
    testkraken = testkraken.cli:main

[bdist_wheel]
universal = true

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = testkraken/_version.py
versionfile_build = testkraken/_version.py
tag_prefix =
parentdir_prefix =

[coverage:run]
branch = True

[tool:pytest]
norecursedirs = .git
