[metadata]
name = niflow-coco2019-unifize_and_skullstrip
version = attr: niflow.coco2019.unifize_and_skullstrip.__version__
url = https://github.com/niflows/niflow-coco2019-unifize_and_skullstrip
author = Christopher J. Markiewicz
author_email = markiewicz@stanford.edu
description = niflow-coco2019-unifize_and_skullstrip workflow package
license = Apache License, 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
# Place any Python dependencies here
install_requires = 
# Uncomment the following line if your package should distribute any non-Python files
# include_package_data = True

[options.entry_points]
console_scripts =
    niflow-coco2019-unifize_and_skullstrip = niflow.coco2019.unifize_and_skullstrip.cli:main

## If your workflow requires data to run, uncomment and update the following section:
# [options.package_data]
# niflow-coco2019-unifize_and_skullstrip =
#     niflow/coco2019/unifize_and_skullstrip/data/*
